Added movie renting options
